k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-app
  labels:
    name: react-app
    environment: production
