k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: react-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: react-app
